--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "baseUrl": ".",
     "paths": {
       "@cv": ["./cv.json"],
+      "@garden": ["./garden.json"],
       "@/*": ["src/*"]
     },
     "jsx": "react-jsx",
