--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^9.1.3",
     "@astrojs/react": "^4.2.1",
     "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/vercel": "^8.1.2",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tsparticles/engine": "^3.8.1",
