--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/react": "^4.2.1",
     "@astrojs/tailwind": "^6.0.0",
     "@astrojs/vercel": "^8.1.2",
+    "@clerk/astro": "^2.3.3",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tsparticles/engine": "^3.8.1",
