--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@astrojs/tailwind": "^6.0.0",
     "@astrojs/vercel": "^8.1.2",
     "@clerk/astro": "^2.3.3",
-    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@clerk/express": "^1.3.53",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tsparticles/engine": "^3.8.1",
