--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "astro-icon": "^1.1.5",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
+    "marked": "^15.0.7",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
