--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
+    "initdb": "tsx -r dotenv/config scripts/init-db.ts",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
@@ -35,12 +36,15 @@
     "react-dom": "^18.3.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.8.2"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "dotenv": "^17.2.1",
+    "pg": "^8.16.3",
     "prettier": "^3.5.3",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.2"
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
